--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 }
 
 .logo {
@@ -9,11 +13,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+  /* margin: 10px; */
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0px;
+  padding: 0;
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+  gap: 20px;
 }
 
 a {
